--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.101"
+		"@sveltejs/adapter-node": "^1.0.0-next.101",
+		"dotenv": "^16.0.3"
 	}
 }
