--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.101",
-		"dotenv": "^16.0.3"
+		"@sveltejs/adapter-node": "^1.0.0-next.101"
 	}
 }
