--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.101"
+		"@sveltejs/adapter-node": "^1.0.0-next.101",
+		"svelte-particles": "^2.5.3",
+		"tsparticles": "^2.5.3",
+		"tsparticles-engine": "^2.5.2"
 	}
 }
