--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^3.1.0",
+		"vite-plugin-compression": "^0.5.1"
 	},
 	"type": "module",
 	"dependencies": {
